--- a/.gitmodules
+++ b/.gitmodules
@@ -26,4 +26,19 @@
 	path = plugin/swank-js
 	url = https://github.com/swank-js/swank-js.git 
 
+[submodule "plugin/flymake/eflymake"]
+	path = plugin/flymake/eflymake
+	url = https://github.com/purcell/flymake-shell.git
 
+[submodule "plugin/flymake/eflymake"]
+	path = plugin/flymake/eflymake
+	url = https://github.com/purcell/flymake-shell.git
+    
+[submodule "plugin/flymake/eflymake"]
+	path = plugin/flymake/eflymake
+	url = git://github.com/retnuh/eflymake.git
+    
+[submodule "plugin/flymake/flymake-shell"]
+	path = plugin/flymake/flymake-shell
+	url = https://github.com/purcell/flymake-shell.git
+ 
